--- a/elements/snippets/payment-list.html
+++ b/elements/snippets/payment-list.html
@@ -1,4 +1,4 @@
-<ul class="payment-list foo-payment row">
+<ul class="payment-list footer__payment row">
     {% for payment in paymentMethods.order %}
         <li class="col-sm-2 col-xs-2 payment-form">
             <img src="{{ payment.thumbnail.url }}" alt="{{ payment.display_name }}">
