--- a/elements/snippets/menu.html
+++ b/elements/snippets/menu.html
@@ -1,24 +1,24 @@
-<div class="main-menu hidden-xs">
+<div class="sidebar__menu hidden-xs">
     {% if settings.show_menu_title %}
         <h4>{{ Translation('ver_todos') }}</h4>
         <h3>{{ Translation('categorias') }}</h3>
     {% endif %}
-    <ul class="level1">
+    <ul class="sidebar__level1">
         {% for level1 in categories %}
-            <li class="item-level1">
-                <a href="{{ level1.link }}" class="link-level1" data-tray-tst="categoria_lvl_1">{{ level1.name }}</a>
+            <li class="sidebar__item-level1">
+                <a href="{{ level1.link }}" class="sidebar__link-level1" data-tray-tst="categoria_lvl_1">{{ level1.name }}</a>
                 {% if level1.children %}
-                    <div class="level2">
+                    <div class="sidebar__level2">
                         <ul>
                             {% for level2 in level1.children %}
-                                <li class="item-level2">
-                                    <a href="{{ level2.link }}" class="link-level2" data-tray-tst="categoria_lvl_2">{{ level2.name }}</a>
+                                <li class="sidebar__item-level2">
+                                    <a href="{{ level2.link }}" class="sidebar__link-level2" data-tray-tst="categoria_lvl_2">{{ level2.name }}</a>
                                     {% if level2.children %}
-                                        <div class="level3">
+                                        <div class="sidebar__level3">
                                             <ul>
                                                 {% for level3 in level2.children %}
-                                                    <li class="item-level3">
-                                                        <a href="{{ level3.link }}" class="link-level3" data-tray-tst="categoria_lvl_3">{{ level3.name }}</a>
+                                                    <li class="sidebar__item-level3">
+                                                        <a href="{{ level3.link }}" class="sidebar__link-level3" data-tray-tst="categoria_lvl_3">{{ level3.name }}</a>
                                                         {% if level3.children %}
                                                         {% endif %}
                                                     </li>
