Remove documentation and legacy CSS, update sidebar styles
Deleted multiple markdown documentation files and legacy CSS (custom.css.html). Added modern sidebar and filter styles to custom-overrides.css. Minor HTML tweaks for consistent text sizing in settings.html. Removed unused font files and test/demo HTML. Added new sidebar newsletter snippet and typography CSS. Cleaned up package files and audit reports.

--- a/configs/settings.html
+++ b/configs/settings.html
@@ -1152,7 +1152,7 @@
                                         </div>
                                         <p class="editor-tip">Ativa a exibi&ccedil;&atilde;o das Avalia&#231;&#245;es na
                                             Home da Loja</p>
-                                        <div class="editor-tip" style="font-size: 12px; margin-top: 8px">
+                                        <div class="editor-tip text-small" style="margin-top: 8px">
                                             Essa funcionalidade depende do plano da loja. Para maiores detalhes acesse: <a href="https://www.tray.com.br/planos-precos" target="_blank">https://www.tray.com.br/planos-precos</a>
                                         </div>
                                     </div>
@@ -1832,7 +1832,7 @@
                                             </div>
                                     </div>
                                 </div>
-                                <a href="https://www.tray.com.br/" target="_blank" style="font-size: 12px; color: #333333">* Disponível em alguns planos.</a>
+                                <a href="https://www.tray.com.br/" target="_blank" class="text-small" style="color: #333333">* Disponível em alguns planos.</a>
                             </fieldset>
                         </li>
                     </ul>
