--- a/elements/header.html
+++ b/elements/header.html
@@ -1,5 +1,5 @@
 <header class="main-header">
-    <!--  Menu Lateral  -->
+    <!--  Menu Lateral - DESABILITADO TEMPORARIAMENTE
     <button class="menu-lateral-toggle" onclick="toggleMenuLateral()">
       <span></span>
       <span></span>
@@ -43,7 +43,9 @@
         </ul>
       </nav>
     </aside>
+    -->
 
+    <!-- Script do Menu Lateral - DESABILITADO TEMPORARIAMENTE
     <script>
     function toggleMenuLateral() {
       const menu = document.querySelector('.menu-lateral');
@@ -97,6 +99,7 @@
       }
     });
     </script>
+    -->
 
     <div class="header-container">
         <!-- Logotipo -->
