--- a/elements/snippets/menu.html
+++ b/elements/snippets/menu.html
@@ -5,20 +5,41 @@
     {% endif %}
     <ul class="level1">
         {% for level1 in categories %}
-            <li class="item-level1">
-                <a href="{{ level1.link }}" class="link-level1" data-tray-tst="categoria_lvl_1">{{ level1.name }}</a>
+            <li class="item-level1" data-level="1" data-id="{{ level1.id }}">
+                <div class="menu-item-wrapper">
+                    <a href="{{ level1.link }}" class="link-level1" data-tray-tst="categoria_lvl_1">{{ level1.name }}</a>
+                    {% if level1.children %}
+                        <button class="menu-expand-btn" aria-label="Expandir {{ level1.name }}" aria-expanded="false">
+                            <img src="{{ asset('img/arrow-right.svg') }}" alt="Expandir" class="expand-icon">
+                        </button>
+                    {% endif %}
+                </div>
                 {% if level1.children %}
                     <div class="level2">
                         <ul>
                             {% for level2 in level1.children %}
-                                <li class="item-level2">
-                                    <a href="{{ level2.link }}" class="link-level2" data-tray-tst="categoria_lvl_2">{{ level2.name }}</a>
+                                <li class="item-level2" data-level="2" data-id="{{ level2.id }}">
+                                    <div class="menu-item-wrapper">
+                                        <a href="{{ level2.link }}" class="link-level2" data-tray-tst="categoria_lvl_2">{{ level2.name }}</a>
+                                        {% if level2.children %}
+                                            <button class="menu-expand-btn" aria-label="Expandir {{ level2.name }}" aria-expanded="false">
+                                                <img src="{{ asset('img/arrow-right.svg') }}" alt="Expandir" class="expand-icon">
+                                            </button>
+                                        {% endif %}
+                                    </div>
                                     {% if level2.children %}
                                         <div class="level3">
                                             <ul>
                                                 {% for level3 in level2.children %}
-                                                    <li class="item-level3">
-                                                        <a href="{{ level3.link }}" class="link-level3" data-tray-tst="categoria_lvl_3">{{ level3.name }}</a>
+                                                    <li class="item-level3" data-level="3" data-id="{{ level3.id }}">
+                                                        <div class="menu-item-wrapper">
+                                                            <a href="{{ level3.link }}" class="link-level3" data-tray-tst="categoria_lvl_3">{{ level3.name }}</a>
+                                                            {% if level3.children %}
+                                                                <button class="menu-expand-btn" aria-label="Expandir {{ level3.name }}" aria-expanded="false">
+                                                                    <img src="{{ asset('img/arrow-right.svg') }}" alt="Expandir" class="expand-icon">
+                                                                </button>
+                                                            {% endif %}
+                                                        </div>
                                                         {% if level3.children %}
                                                         {% endif %}
                                                     </li>
