--- a/pages/product.html
+++ b/pages/product.html
@@ -1,12 +1,12 @@
 {% if banner.title %}
-    <div class="banner banner-title ">
+    <div class="banner banner-title">
         {{ banner.title }}
     </div>
 {% endif %}
 
 {% for discount in ProgressiveDiscounts %}
 {% if discount.banner %}
-   <img src="{{ discount.banner }}" alt="{{discount.name}}"/>  
+   <img src="{{ discount.banner }}" alt="{{discount.name}}" loading="lazy">  
 {% endif %}
 {% endfor %}
 
@@ -211,7 +211,7 @@
 {% endif %}
 
 {% if banner.bottom %}
-    <div class="banner banner-bottom ">
+    <div class="banner banner-bottom">
         {{ banner.bottom }}
     </div>
 {% endif %}
