Remove inline styles and scripts, modularize assets
Refactored HTML files to remove inline CSS and JavaScript, moving styles to custom-overrides.css and scripts to new JS modules. Removed unused CSS files (critical.css, theme.css), updated references, and added a detailed refactoring report. This improves maintainability, organization, and performance by following best practices for asset management.

--- a/elements/snippets/breadcrumb.html
+++ b/elements/snippets/breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="breadcrumb">
+<div class="breadcrumb" aria-label="Navegação estrutural">
   <span class="breadcrumb-item"><a href="/">{{ Translation('pagina_inicial') }}</a></span>
   <span class="icon-breadcrumb">/</span>
   {% if breadcrumb %}
