--- a/elements/snippets/social-list.html
+++ b/elements/snippets/social-list.html
@@ -2,7 +2,7 @@
     {% if settings.social_facebook %}
     <li>
         <a href="https://www.facebook.com/{{ settings.social_facebook }}" target="_blank">
-            <img src="{{ asset('img/facebook.svg') }}" alt="Facebook" width="20" height="20">
+            <img src="{{ asset('img/facebook.svg') }}" alt="Facebook" width="20" height="20" loading="lazy">
             Facebook
         </a>
     </li>
@@ -22,7 +22,7 @@
     {% if settings.whatsapp %}
     <li>
         <a href="https://api.whatsapp.com/send?phone=55{{ settings.whatsapp|replace({'(': '', ')': '', '-': '', ' ': ''}) }}" target="_blank" rel="noopener">
-            <img src="{{ asset('img/whatsapp.svg') }}" alt="Whatsapp" width="20" height="20">
+            <img src="{{ asset('img/whatsapp.svg') }}" alt="Whatsapp" width="20" height="20" loading="lazy">
             {{ settings.whatsapp }}
         </a>
     </li>
@@ -31,7 +31,7 @@
     {% if settings.social_youtube %}
     <li>
         <a href="https://www.youtube.com/{{ settings.social_youtube }}" target="_blank">
-            <img src="{{ asset('img/youtube.svg') }}" alt="Youtube" width="20" height="20">
+            <img src="{{ asset('img/youtube.svg') }}" alt="Youtube" width="20" height="20" loading="lazy">
             YouTube
         </a>
     </li>
@@ -40,7 +40,7 @@
     {% if settings.social_pinterest %}
     <li>
         <a href="https://br.pinterest.com/{{ settings.social_pinterest }}" target="_blank">
-            <img src="{{ asset('img/pinterest.svg') }}" alt="Pinterest" width="20" height="20">
+            <img src="{{ asset('img/pinterest.svg') }}" alt="Pinterest" width="20" height="20" loading="lazy">
             Pinterest
         </a>
     </li>
@@ -49,7 +49,7 @@
     {% if settings.social_instagram %}
     <li>
         <a href="https://www.instagram.com/{{ settings.social_instagram }}" target="_blank">
-            <img src="{{ asset('img/instagram.svg') }}" alt="Instagram" width="20" height="20">
+            <img src="{{ asset('img/instagram.svg') }}" alt="Instagram" width="20" height="20" loading="lazy">
             Instagram
         </a>
     </li>
