--- a/elements/snippets/payment-list.html
+++ b/elements/snippets/payment-list.html
@@ -1,12 +1,12 @@
 <ul class="payment-list foo-payment row">
     {% for payment in paymentMethods.order %}
         <li class="col-sm-2 col-xs-2 payment-form">
-            <img src="{{ payment.thumbnail.url }}" alt="{{ payment.display_name }}">
+            <img src="{{ payment.thumbnail.url }}" alt="{{ payment.display_name }}" loading="lazy">
         </li>
     {% endfor %}
     {% for payment in paymentMethods.credit %}
         <li class="col-sm-2 col-xs-2 payment-form">
-            <img src="{{ payment.thumbnail.url }}" alt="{{ payment.display_name }}">
+            <img src="{{ payment.thumbnail.url }}" alt="{{ payment.display_name }}" loading="lazy">
         </li>
     {% endfor %} 
 </ul>
